# dare

./: .gitignore  README.rst  mypy.ini  pyproject.toml  run-lint.sh  run-tests.sh
src/dare/: __main__.py  prompts.py  script_processor.py  settings.py
src/wzrd/: __main__.py
tests/: test_config.py
