[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dare"
version = "0.1.0"
description = "A command line tool to generate Python scripts using LLM"
authors = [{name = "Antti Kaihola", email = "13725+akaihola@users.noreply.github.com"}]
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "llm>=0.2.0",
    "click"
]

[project.scripts]
dare = "dare.__main__:main"
