[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dare"
version = "0.1.0"
description = "A command line tool to generate Python scripts using LLM"
authors = [{name = "Antti Kaihola", email = "13725+akaihola@users.noreply.github.com"}]
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "llm>=0.2.0",
    "click>=8.0",
    "platformdirs",
    "rich>=13.0.0",
    "typed-settings>=1.0.0",
    "typing-extensions>=4.0.0"
]

[tool.mypy]
ignore_missing_imports = true

[project.scripts]
dare = "dare.__main__:main"

[dependency-groups]
dev = [
    "darker @ git+https://github.com/akaihola/darker.git@master",
    "graylint @ git+https://github.com/akaihola/graylint.git@main",
    "llm-openrouter",
    "mypy",
    "pytest",
    "types-Pygments",
]

[tool.darker]
formatter = "ruff"
revision = "main..."
src = ["src"]

[tool.graylint]
lint = [
    "ruff check --output-format=concise",
    "mypy",
]
revision = "main..."
src = ["src"]
